Chore: fix spacing issue on workshop cards title

--- a/client/components/workshops/workshops.styl
+++ b/client/components/workshops/workshops.styl
@@ -72,6 +72,9 @@ $workshop-width = 400px
   .name
     font-size 32px
     flex-grow 0.5
+  h2
+    margin-top 10px
+    margin-bottom 20px
   h3
     margin 0
     font-size 24px
